[project]
name = "ece-140b-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.1",
    "jinja2==3.1.6",
    "requests==2.32.5",
    "starlette==0.52.1",
    "uvicorn==0.41.0",
    "websockets==16.0"
]
